The nationality state

--- a/site/index.html
+++ b/site/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
 	<h1>Hello coursera! Here is vincente.</h1>
+	<h2>Vincinte is from Mozambique</h2>
+	<h2>Huan is from Japan</h2>
 </body>
 </html>
